updating bootstrap elements

--- a/2FET/Week9-Bootstrap/Week9CA/about.html
+++ b/2FET/Week9-Bootstrap/Week9CA/about.html
@@ -43,87 +43,92 @@
 
         <p>My goal in taking the <strong>Promineo Tech Front-End Software Developer Bootcamp</strong> is to seek out new career opportunities that will enable me to grow in the Software Development field. I'm seeking full-remote employment at a company whose values and mission statement resonate with me.</p>    
         <!-- I've added 2 picture already so I thought adding a gif would be neat -->
-        <img id="programmer-gif" src="./images/programmer.gif" alt="programmer sitting at computer">
+        <img src="./images/programmer.gif" class="img-fluid col-6" alt="programmer sitting at computer">
         
         <h4>In the order presented, I have learned up to HTML. I'm currently on Week 8 of 18.</h2>     
         <!-- todo  -->
-        <table class="about-table">
+        <table class="table">
+            <thead>
             <tr>
-                <th>Week</th>
-                <th>Concepts</th>
-                <th>Assignment/Notes GitHub</th>
-                <th>Technology</th>
+                <th scope="col">Week</th>
+                <th scope="col">Concepts</th>
+                <th scope="col">Assignment/Notes GitHub</th>
+                <th scope="col">Technology</th>
             </tr>
-            <tr>
-                <td>1:</td>
-                <td>CLI, Source Control, and Variables</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week1-Variables">Notes</a></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-            </tr>
-            <tr>
-                <td>2:</td>
-                <td>Conditions and Loops</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week2-ConditionsAndLoops">Notes</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1:</td>
+                    <td>CLI, Source Control, and Variables</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week1-Variables">Notes</a></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+                <tr>
+                    <td>2:</td>
+                    <td>Conditions and Loops</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week2-ConditionsAndLoops">Notes</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
-            </tr>
-            <tr>
-                <td>3:</td>
-                <td>Arrays and Functions</td>
-                <td><a href="https://github.com/jairalcon/Promineo/blob/main/1JS/Week3-ArraysAndFunctions/Week3CA.js">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+                <tr>
+                    <td>3:</td>
+                    <td>Arrays and Functions</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/blob/main/1JS/Week3-ArraysAndFunctions/Week3CA.js">Assignment</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
-            </tr>
-            <tr>
-                <td>4:</td>
-                <td>ECMAScript 6 and Intermediate JavaScript</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week4-ECMASAndInterJS">Notes</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+                <tr>
+                    <td>4:</td>
+                    <td>ECMAScript 6 and Intermediate JavaScript</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week4-ECMASAndInterJS">Notes</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
-            </tr>
-            <tr>
-                <td>5:</td>
-                <td>Object Oriented Programming</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week5-ObjectOrtientedProgramming/Week5CodingAssignment">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+                <tr>
+                    <td>5:</td>
+                    <td>Object Oriented Programming</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week5-ObjectOrtientedProgramming/Week5CodingAssignment">Assignment</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
-            </tr>
-            <tr>
-                <td>6:</td>
-                <td>DevTools, Debugging, and Unit Tests</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week6-DevToolsDebuggingAndUnitTesting/Week6CodingAssignment">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-                <td><img  height="75px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner"></td>
-            </tr>
-            <tr>
-                <td>7:</td>
-                <td>HyperText Markup Language (HTML)</td>
-                <td><a href="https://github.com/jairalcon/Promineo/tree/main/2FET/Week7-HTML/Week7CA">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+                <tr>
+                    <td>6:</td>
+                    <td>DevTools, Debugging, and Unit Tests</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/tree/main/1JS/Week6-DevToolsDebuggingAndUnitTesting/Week6CodingAssignment">Assignment</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                    <td><img height="75px" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner"></td>
+                </tr>
+                <tr>
+                    <td>7:</td>
+                    <td>HyperText Markup Language (HTML)</td>
+                    <td><a href="https://github.com/jairalcon/Promineo/tree/main/2FET/Week7-HTML/Week7CA">Assignment</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
 
-            </tr>
-            <tr>
-                <td>8:</td>
-                <td>Cascading Style Sheets (CSS)</td>
-                <td><a href="jairalcon.github.io/week8codingassignment/">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-            </tr>
-            <tr>
-                <td>9:</td>
-                <td>Bootstrap 5</td>
-                <td><a href="#">Assignment</a></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
-                <td><img  height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
-                <td><img  height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
-            </tr>
+                </tr>
+                <tr>
+                    <td>8:</td>
+                    <td>Cascading Style Sheets (CSS)</td>
+                    <td><a href="jairalcon.github.io/week8codingassignment/">Assignment</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+                <tr>
+                    <td>9:</td>
+                    <td>Bootstrap 5</td>
+                    <td><a href="#">Assignment</a></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" alt="Bootstrap banner"></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner"></td>
+                    <td><img height="75px" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner"></td>
+                    <td><img height="75px" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner"></td>
+                </tr>
+            </tbody>
         </table>
     </main>
 
