--- a/2FET/Week9-Bootstrap/Week9CA/contact.html
+++ b/2FET/Week9-Bootstrap/Week9CA/contact.html
@@ -89,8 +89,7 @@
           <img src="./images/linkedin-logo.png" class="card-img-top img-fluid img-fluid w-25 rounded mx-auto d-block" alt="LinkedIn logo">
           <div class="card-body">
             <h5 class="card-title">LinkedIn</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <p class="card-text">You can connect with my on LinkedIn and follow my journey to becoming a Front-End Software Developer.</p>
             <a href="https://www.linkedin.com/in/jairalcon/" class="btn btn-primary">Visit my LinkedIn</a>
           </div>
         </div>
