--- a/2FET/Week9-Bootstrap/Week9CA/index.html
+++ b/2FET/Week9-Bootstrap/Week9CA/index.html
@@ -51,8 +51,9 @@
     </div>
     <!-- todo -->
 
-    <div id="homeCarousel" class="container-md col-4 carousel slide carousel-fade" data-bs-ride="carousel">
-      <div class="carousel-indicators">
+    <div id="homeCarousel" class="container-lg col-6 carousel slide carousel-fade" data-bs-ride="carousel">
+      <!-- ! I thought I wanted indicators but they got in the way of the images -->
+      <!-- <div class="carousel-indicators">
         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="0" class="active" aria-current="true"
           aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -62,31 +63,31 @@
         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="7" aria-label="Slide 8"></button>
-      </div>
+      </div> -->
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
-          <img src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" class="d-block w-100" alt="Git banner">
+          <img class="d-block w-100" src="https://media-exp1.licdn.com/dms/image/C4D12AQF6-4QGS0Gw2Q/article-cover_image-shrink_720_1280/0/1623147132038?e=1659571200&v=beta&t=QPB1wC06xEjFk0GTYSf-xPYGWwvblxpvP2384PPxJIo" alt="Git banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" class="d-block w-100" alt="JavaScript banner">
+          <img class="d-block w-100" src="https://www.tutorialrepublic.com/lib/images/javascript-illustration.png" alt="JavaScript banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" class="d-block w-100" alt="Mocha Chai banner">
+          <img class="d-block w-100" src="https://res.cloudinary.com/practicaldev/image/fetch/s--vO142fiA--/c_imagga_scale,f_auto,fl_progressive,h_500,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/02au9dw6ydmjldesu7tn.png" alt="Mocha Chai banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" class="d-block w-100" alt="HTML banner">
+          <img class="d-block w-100" src="https://www.tutorialrepublic.com/lib/images/html-illustration.png" alt="HTML banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" class="d-block w-100" alt="CSS banner">
+          <img class="d-block w-100" src="https://www.tutorialrepublic.com/lib/images/css-illustration.png" alt="CSS banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" class="d-block w-100" alt="Bootstrap banner">
+          <img class="d-block w-100" src="https://www.tutorialrepublic.com/lib/images/bootstrap-5.0-illustration.png" alt="Bootstrap banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://www.tutorialrepublic.com/lib/images/jquery-illustration.png" class="d-block w-100" alt="JQuery banner">
+          <img class="d-block w-100" src="https://www.tutorialrepublic.com/lib/images/jquery-illustration.png" alt="JQuery banner">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="https://user-images.githubusercontent.com/41876764/94856480-e7b8b200-03e4-11eb-949d-c3a447b43df2.jpeg" class="d-block w-100" alt="REACT banner">
+          <img class="d-block w-100" src="https://user-images.githubusercontent.com/41876764/94856480-e7b8b200-03e4-11eb-949d-c3a447b43df2.jpeg" alt="REACT banner">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev">
