ready for submission

--- a/2FET/Week9-Bootstrap/Week9CA/contact.html
+++ b/2FET/Week9-Bootstrap/Week9CA/contact.html
@@ -74,19 +74,19 @@
     <!-- ! New "Links" cards for contact page -->
     <div class="row row-cols-1 row-cols-md-2 g-2">
       <div class="col">
-        <div class="card">
-          <img src="./images/github-logo.png" class="card-img-top img-fluid img-fluid w-25 rounded mx-auto d-block" alt="GitHub logo">
+        <div class="card h-100">
+          <img src="./images/github-logo.png" class="card-img-top img-fluid img-fluid rounded mx-auto d-block" alt="GitHub logo" style="width: 10rem;">
           <div class="card-body">
             <h5 class="card-title">GitHub</h5>
-            <p class="card-text">I am currently enrolled in a Front End Development Bootcamp with Promineo Tech, in which I am learning JavaScript,
+            <p class="card-text">I am currently enrolled in a Front-End Development Bootcamp with Promineo Tech. I'm learning JavaScript, HTML, CSS,
             Bootstrap, and React.</p>
             <a href="https://github.com/jairalcon" class="btn btn-primary">Visit my GitHub</a>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card">
-          <img src="./images/linkedin-logo.png" class="card-img-top img-fluid img-fluid w-25 rounded mx-auto d-block" alt="LinkedIn logo">
+        <div class="card h-100">
+          <img src="./images/linkedin-logo.png" class="card-img-top img-fluid img-fluid rounded mx-auto d-block" alt="LinkedIn logo" style="width: 10rem;">
           <div class="card-body">
             <h5 class="card-title">LinkedIn</h5>
             <p class="card-text">You can connect with my on LinkedIn and follow my journey to becoming a Front-End Software Developer.</p>
