adding console logs

--- a/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
+++ b/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
@@ -41,6 +41,7 @@
             <th>Car Make</th>
             <th>Car Model</th>
             <th>Vehicle Year</th>
+            <th>Actions</th>
         </tr>
     </table>
 
