updating comments to code

--- a/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
+++ b/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
@@ -36,7 +36,7 @@
         </div>
         <h2>Current Vehicle Inventory</h2>
     </div>
-    <table id="list" class="table table-light table-striped">
+    <table id="vehicle-table" class="table table-light table-striped">
         <tr>
             <th>Car Make</th>
             <th>Car Model</th>
