--- a/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
+++ b/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
@@ -11,7 +11,7 @@
 
 <body class="container">
     <br>
-    <h1>Add To Vehicle Inventory</h1>
+    <h1 class="text-center">Add To Vehicle Inventory</h1>
     <div class="card">
         <div class="card-body">
             <div class="row">
@@ -20,6 +20,17 @@
                     <label for="new-vehicle-make">Vehicle Make</label>
                     <input type="text" class="form-control" id="new-vehicle-make" placeholder="Make">
                 </div>
+				
+				<!-- <div class="input-group mb-3">
+					<label class="input-group-text" for="inputGroupSelect01">Vehicle Make</label>
+					<select class="form-select" id="inputGroupSelect01">
+						<option selected>Choose...</option>
+						<option value="1">One</option>
+						<option value="2">Two</option>
+						<option value="3">Three</option>
+					</select>
+				</div> -->
+
                 <div class="col-sm">
                     <div class="form-group"></div>
                     <label for="new-vehicle-model">Vehicle Model</label>
@@ -34,8 +45,9 @@
             <br>
             <button id="add" class="btn btn-primary form-control">Add</button>
         </div>
-        <h2>Current Vehicle Inventory</h2>
+        <h2 class="container text-center">Current Vehicle Inventory</h2>
     </div>
+	<br>
     <table id="vehicle-table" class="table table-light table-striped">
         <tr>
             <th>Car Make</th>
