updating comments and JS

--- a/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
+++ b/2FET/Week10-JS-DOM/Week10-CodingAssignment/index.html
@@ -16,11 +16,11 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-sm">
-                    <div class="form-group"></div>
+                    <div id="my-input" class="form-group"></div>
                     <label for="new-vehicle-make">Vehicle Make</label>
                     <input type="text" class="form-control" id="new-vehicle-make" placeholder="Make">
                 </div>
-				
+				<!-- working on adding dropdown menus of car data -->
 				<!-- <div class="input-group mb-3">
 					<label class="input-group-text" for="inputGroupSelect01">Vehicle Make</label>
 					<select class="form-select" id="inputGroupSelect01">
