--- a/2FET/Week11-JQuery-AJAX/Week11-Coding-Assignment/index.html
+++ b/2FET/Week11-JQuery-AJAX/Week11-Coding-Assignment/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Week11.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Tic Tac Toe</title>
 </head>
 <body class="container mt-3 p-4 text-center">
@@ -45,9 +47,12 @@
         <span class="turn">It is X's Turn</span>
     </div>
 
-    <script src="../sample/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
     <script src="index.js"></script>
-    <script src="../sample/node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- <script src="../node_modules/jquery/dist/jquery.js"></script> -->
 </body>
 
 </html>
