--- a/2FET/Week12-CRUD-Project/crudAPP.html
+++ b/2FET/Week12-CRUD-Project/crudAPP.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container mt-3 pt-4">
     <h1 class="text-center">House CRUD App</h1>
-    <div id="new-house" class="p-3 bg-light border rounded-3">
+    <div id="new-house" class="jumbotron"> <!-- p-3 bg-light border rounded-3 -->
         <h2>New House</h2>
         <input type="text" id="new-house-name" class="form-control">
         <button id="create-new-house" class="btn btn-primary form-control">Create</button>
