adding another th to display id + 1

--- a/2FET/Week12-CRUD-Project/Week12-Project/index.html
+++ b/2FET/Week12-CRUD-Project/Week12-Project/index.html
@@ -53,7 +53,7 @@
 	<br>
     <table id="table" class="table table-light table-striped">
         <thead>
-            <tr><th>Car Make</th><th>Car Model</th><th>Vehicle Year</th><th>Actions</th></tr>
+            <tr><th>#</th><th>Car Make</th><th>Car Model</th><th>Vehicle Year</th><th>Actions</th></tr>
         </thead>
         <tbody id="vehicles-container">
 
