--- a/1JS/Week4-ECMASAndInterJS/index.html
+++ b/1JS/Week4-ECMASAndInterJS/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Intro To JavaScript Lab</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <h1>Intro To JavaScript Labs</h1>
-        
-        <!-- Uncomment the file you are working on -->
 
-        <!-- <script src="VariablesAndOperations.js"></script> -->
-        <!-- <script src="VariableDataTypes.js"></script> -->
-        <!-- <script src="ConditionsAndLoops.js"></script> -->
-        <!-- <script src="ArraysAndFunctions.js"></script> -->
-        <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
-        <!-- <script src="ObjectOriented.js"></script> -->
-        <script src="LiveClass.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Intro To JavaScript Lab</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <h1>Intro To JavaScript Labs</h1>
+
+    <!-- Uncomment the file you are working on -->
+
+    <!-- <script src="VariablesAndOperations.js"></script> -->
+    <!-- <script src="VariableDataTypes.js"></script> -->
+    <!-- <script src="ConditionsAndLoops.js"></script> -->
+    <!-- <script src="ArraysAndFunctions.js"></script> -->
+    <!-- <script src="ArrowFunctionsAndCallbacks.js"></script> -->
+    <!-- <script src="ObjectOriented.js"></script> -->
+    <script src="CodeWars.js"></script>
 
 
-    </body>
+</body>
+
 </html>
 
 <!-- JS is a front-end programming language. Node.js came out in 2009 which allowed it to be
@@ -40,7 +43,7 @@ We have to think about what all the small steps are, programming them one at a t
     -Merge that branch into the master branch
     -->
 
-    <!-- When working on a project with a team, making sure everyone has the same, 
+<!-- When working on a project with a team, making sure everyone has the same, 
         up-to-date code is important. 
 
 Git is a Source Control tool used to enable teams to collaborate on projects at the same time. 
@@ -124,10 +127,3 @@ Below is an overview of a basic git workflow.
 5. Push changes to a remote branch using 'git push origin master:[branch name]' where branch name is the name of the branch we are pushing to.
 
 6. Create a pull request to merge our branch into the Main branch (this will be done on GitHub in our case). -->
-
-/** 
-* ! this can be only static
-* todo: we need to call some method
-* ? used for questions
-
-*/
